public/styles/designer.css
.w {
    padding: 16px;
    position: absolute;
    z-index: 4;
    border: 1px solid #2e6f9a;
    box-shadow: 2px 2px 19px #e0e0e0;
    -o-box-shadow: 2px 2px 19px #e0e0e0;
    -webkit-box-shadow: 2px 2px 19px #e0e0e0;
    -moz-box-shadow: 2px 2px 19px #e0e0e0;
    -moz-border-radius: 8px;
    border-radius: 8px;
    opacity: 0.8;
    cursor: move;
    background-color: white;
    font-size: 11px;
    -webkit-transition: background-color 0.25s ease-in;
    -moz-transition: background-color 0.25s ease-in;
    transition: background-color 0.25s ease-in;
}

.w:hover {
    background-color: #5c96bc;
    color: white;
}

.w.active {
    background-color: darkorange;
    -webkit-transition: background-color 0.8s ease;
    -moz-transition: background-color 0.8s ease;
    -o-transition: background-color 0.8s ease;
    transition: background-color 0.8s ease;
}

.w.state-isAccepted {
    border: 6px double #666;
    padding:13px;
}

.w.state-isStart {
    background-color: violet;
}

.aLabel {
    -webkit-transition: background-color 0.25s ease-in;
    -moz-transition: background-color 0.25s ease-in;
    transition: background-color 0.25s ease-in;
}

.aLabel.jsplumb-hover, .jsplumb-source-hover, .jsplumb-target-hover {
    background-color: #055599;
    color: white;
}

.aLabel {
    background-color: white;
    opacity: 0.8;
    padding: 0.3em;
    border-radius: 0.5em;
    border: 1px solid #346789;
    cursor: pointer;
}

.aLabel:hover {
    z-index:1000;
}

.ep {
    position: absolute;
    bottom: 37%;
    right: -6px;
    width: 1em;
    height: 1em;
    background-color: orange;
    cursor: pointer;
    box-shadow: 0 0 2px black;
    -webkit-transition: -webkit-box-shadow 0.25s ease-in;
    -moz-transition: -moz-box-shadow 0.25s ease-in;
    transition: box-shadow 0.25s ease-in;
}

.ep:hover {
    box-shadow: 0 0 6px black;
}

#canvas .jsplumb-endpoint {
    z-index: 1;
}

.dragHover {
    border: 2px solid orange;
}

path, .jsplumb-endpoint { cursor:pointer; }

.jsplumb-connector:hover path {

}

#canvas-wrapper {
    height:500px;
    border: solid #DDD;
    border-width:2px 0 2px 0;
    overflow: auto;
    resize: vertical;
}

#canvas {
    position: relative;
}

#canvas::-webkit-scrollbar {
    display: none;
}

pre {

}

#editConnectionForm input {
    width: 40px;
}

#editConnectionForm select {
    width: 60px;
}

p.invalid {
    height: 25px;
}

#invalid-state-name {
    color: darkred;
    display: none;
}

.state-btn, .connection-btn {

}

